--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,2 @@
 <button class="btn btn-primary" [disabled] ="!allowNewServer">Add server</button>
-
-
-<app-server></app-server>
+<p [innerText] = "allowNewServer"></p>
